@@ -89,6 +89,9 @@ Improvements
 
 * SOLR-17046: SchemaCodecFactory is now the implicit default codec factory.  (hossman)
 
+* SOLR-16397: Swap core v2 endpoints have been updated to be more REST-ful.
+  SWAP is now available at `POST /api/cores/coreName/swap` (Sanjay Dutt via Jason Gerlowski)
+
 Optimizations
 ---------------------
 (No changes)
